# OSPO_Data_Management

./: .gitignore  README.md  ospo_database.sql  pyproject.toml  requirements.txt
source_data/: stargazer_history.parquet  survey_results.csv
src/: dbsetup.py  githubdeepdive_scrape.py
src/gddospo/: ospo_db_tools.py  ospo_uw_tools.py
tests/: test_clean_repo.py
xddsource/: add_createdates.py  clean_repositories.py  crawl_owners.py  crawl_repositories.py  datacite_scrape.py  dbsetup.py  githubdeepdive_scrape.py
xddsource/gddospo/: gdd_tools.py  ospo_db_tools.py  ospo_uw_tools.py
xddsource/tests/: clean_repo_test.py
